# Palimpsa

./: .gitignore  README.md  benchmark_mqar.py  config_mqar.py  model_mqar.py  pyproject.toml  test_shakespeare_run.sh  train.py  train_nano.py  train_nano_hmm.py
config/: mamba2_170M.json  mamba2_760M.json  meta_mamba2_170M.json  not_palimpsa_760M.json  palimpsa_170M.json  train_shakespeare_char.py
data/: download_fineweb.py  metahmm.py  metahmm_cleansplit.py
data/data_mqar/: associative_recall.py  config.py  utils.py
evaluation/: launcher.py  run_eval.sh
examples/scripts/: run_eval.sh
examples/slurm/: slurm_run_palimpsa_lab.sh
palimpsa/: __init__.py  check_palimpsa.py  integration.py
palimpsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
palimpsa/layers/: __init__.py  meta_mamba2.py  palimpsa.py
palimpsa/models/meta_mamba2/: __init__.py  configuration_meta_mamba2.py  modeling_meta_mamba2.py
palimpsa/models/palimpsa/: __init__.py  configuration_palimpsa.py  modeling_palimpsa.py
palimpsa/ops/palimpsa/: __init__.py  chunk_palimpsa_forgetting_scalar.py  fused_recurrent_palimpsa.py
results_reconstruction/: plot_reconstruction.py
tools/: convert_dcp_to_hf.py  prepare_finetune.py
zoology/: config.py  launch.py  logger.py  me_plot.py  model.py  plot.py  train.py
zoology/mixers/: gated_delta_net.py  meta_mamba2.py  palimpsa.py
zoology/mqar_figure/: configs.py
